--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --experimental-wasi-unstable-preview1 --experimental-wasm-bigint --project ./server/tsconfig.json --respawn  ./server/index.ts",
+    "dev": "ts-node-dev --experimental-wasi-unstable-preview1 --project ./server/tsconfig.json --respawn  ./server/index.ts",
     "start": "tsc --project ./server/tsconfig.json",
-    "poststart": "node --experimental-wasi-unstable-preview1  --experimental-wasm-bigint ./dist/index.js"
+    "poststart": "node --experimental-wasi-unstable-preview1 ./dist/index.js"
   },
   "engines": {
     "node": ">=12.18.1"
@@ -16,7 +16,6 @@
   "dependencies": {
     "antd": "^4.12.2",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
     "localtunnel": "^2.0.1",
     "p-queue": "^6.6.2",
     "react": "^17.0.1",
